# dsiem-esproxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  build.sh  rustfmt.toml
.github/: codecov.yml  release.yml
.github/workflows/: code-coverage.yml  conventional-label.yml  pr-title-checker.yml  pr.yml  publish.yml
examples/conf/dsiem/: directives_dsiem-backend-0_testing1.json  directives_dsiem-backend-1_testing1.json  dsiem_config.json
examples/conf/vector/central/: random_netdevice.yaml  sinks-debug.yaml  sinks.yaml  suricata.yaml
examples/conf/vector/dsiem-sidecar/: sinks.yaml
examples/elasticsearch/: compose.yml  kbndashboard-import.sh  readme.md
examples/elasticsearch/conf/dsiem/: directives_dsiem-backend-0_random_netdevice.json
examples/elasticsearch/conf/vector/central/: random_netdevice.tsv  sinks.yaml  suricata.yaml
examples/elasticsearch/conf/vector/dsiem-sidecar/: dsiem.yaml  sinks.yaml
examples/surrealdb/: compose-with-es.yml  compose.yml  readme.md
examples/surrealdb/conf/vector/central/: random_netdevice.yaml  sinks.yaml  suricata.yaml
examples/surrealdb/conf/vector/dsiem-sidecar/: dsiem.yaml  sinks.yaml
scripts/: coverage-dev-task.sh  coverage.sh  dockerbuild.sh  gen_lcov_report.sh
src/: main.rs  server.rs
src/server/: app_error.rs  elasticsearch.rs  surrealdb.rs  validate.rs
tests/: compose.yml  e2e.rs
tests/conf/dsiem/: directives_dsiem-backend-0_random_netdevice.json
tests/conf/vector/central/: random_netdevice.yaml
tests/conf/vector/dsiem-sidecar/: dsiem.yaml  sinks.yaml
